...
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <item
            android:id="@+id/menu_item_set_range_marker"
            android:icon="@drawable/range"
            android:title="@string/menu_item_set_range_marker"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction"
            android:enabled="false"/>
    <item
            android:id="@+id/menu_item_crop_range"
            android:icon="@drawable/cut"
            android:title="@string/menu_item_crop_range"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction"
            android:enabled="false"/>
    <item
            android:id="@+id/menu_item_discard_markers"
            android:icon="@drawable/discard"
            android:title="@string/menu_item_discard_markers"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction"
            android:enabled="false"/>
    <item
...
