...
                                             tools:showIn="@layout/activity_main">

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/root_chart_view">
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
