...
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone"/>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"/>

</android.support.design.widget.CoordinatorLayout>
