<!--
  ~
  ~     FloatSight
  ~     Copyright 2018 Thomas Hirsch
  ~     https://github.com/84n4n4/FloatSight
  ~
  ~     This file is part of FloatSight.
  ~     FloatSight is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     FloatSight is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with FloatSight.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<resources>
    <string name="app_name">FloatSight</string>

    <!-- Chart labels -->
    <string name="vert_velocity_label">V-vert</string>
    <string name="hor_velocity_label">V-hor</string>
    <string name="altitude_label">Altitude</string>
    <string name="glide_label">Glide</string>
    <string name="distance_label">Distance</string>
    <string name="time_label">Time</string>

    <!-- File open and parsing -->
    <string name="some_errors_parsing_file">Had some problems parsing CSV file, FlySight track data may be incomplete or incorrect.</string>
    <string name="fail_parsing_file">Could not read CSV file, probably wrong filetype?</string>
    <string name="file_import_success">Tracks imported!</string>
    <string name="file_import_some_errors">Couldn\'t import all files.</string>
    <string name="file_import_fail">Couldn\'t read files.</string>
    <string name="permissions_rationale">Storage access is required to read and save FlySight track data.</string>


    <!-- General dialog stuff -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- About dialog -->
    <string name="about_dialog_version">Version %1$s</string>
    <string name="about_dialog_licence_and_help">More info and licence:</string>
    <string name="about_dialog_link">https://github.com/84n4n4/FloatSight/blob/master/README.md</string>
    <string name="about_dialog_contact_bugreports">Contact:</string>
    <string name="about_dialog_floatcast_link">http://www.floatcast.org</string>

    <!-- Save dialog -->
    <string name="save_dialog_title">Save file as</string>
    <string name="save_error">Couldn\'t write file to local storage.</string>
    <string name="file_name_empty">File name should contain at least one character.</string>
    <string name="file_already_exists">File with this name already exists</string>
    <string name="file_overwrite_warning">WARNING! This will overwrite this track file.</string>
    <string name="file_has_to_be_csv">File name has to end with ".csv" or ".CSV"</string>
    <string name="file_name_hint">File name</string>

    <!-- Plot fragment dialogs -->
    <string name="y_axis_dialog_title">Show values for</string>
    <string name="x_axis_dialog_title">Show values by</string>
    <string name="glide_cap_dialog_title">Cap glide at</string>
    <string name="plot_units_dialog_title">Units</string>
    <string name="plot_units_metric">Metric</string>
    <string name="plot_units_imperial">Imperial</string>
    <string name="crop_plot_dialog_title">Crop data to range</string>
    <string name="crop_plot_dialog_description">Remove data outside the currently marked range?</string>
    <string name="crop_plot_dialog_button">crop</string>

    <!-- Main menu -->
    <string name="button_import_title">Import tracks</string>
    <string name="button_import_description">Import FlySight tracks</string>
    <string name="button_load_title">Browse tracks</string>
    <string name="button_load_description">Browse imported tracks</string>
    <string name="button_config_title">Config editor</string>
    <string name="button_config_description">Flysight config editor</string>
    <string name="button_about_title">About</string>
    <string name="button_about_description">About this app</string>

    <!-- Track menu -->
    <string name="button_label_filename">File: %1$s</string>
    <string name="button_label_file_modified">Modified: %1$s</string>
    <string name="button_label_empty"> </string>
    <string name="button_label_parsing_error">Could not read file.</string>
    <string name="button_label_start_time">Date: %1$s</string>
    <string name="button_plot_title">Plot</string>
    <string name="button_plot_description">Show track plot</string>
    <string name="button_stats_title">Stats</string>
    <string name="button_stats_description">Show track stats</string>
    <string name="button_share_title">Send</string>
    <string name="button_share_description">Send this track file</string>
    <string name="discard_changes">Discard changes</string>
    <string name="save_as">Save as</string>
    <string name="save">Save</string>

    <!-- Stats fragment -->
    <string name="stats_filename">File</string>
    <string name="stats_start_time">Start time</string>
    <string name="stats_duration">Duration</string>
    <string name="stats_max_altitude">Max altitude</string>
    <string name="stats_min_altitude">Min altitude</string>
    <string name="stats_distance">Distance</string>
    <string name="stats_one_to_one">Distance equals altitude</string>
    <string name="stats_max_horizontal_velocity">Max horizontal velocity</string>
    <string name="stats_min_horizontal_velocity">Min horizontal velocity</string>
    <string name="stats_avg_horizontal_velocity">Average horizontal velocity</string>
    <string name="stats_max_vertical_velocity">Max vertical velocity</string>
    <string name="stats_min_vertical_velocity">Min vertical velocity</string>
    <string name="stats_avg_vertical_velocity">Average vertical velocity</string>
    <string name="stats_max_glide">Max glide</string>
    <string name="stats_min_glide">Min glide</string>
    <string name="stats_avg_glide">Average glide</string>

    <!-- Config menu -->

    <!-- File picker fragment -->
    <string name="error_opening_local_storage">Couldn\'t read from local storage.</string>

    <string name="open">open</string>
    <string name="delete">delete</string>
    <string name="rename">rename</string>

    <!-- Toolbar -->
    <string name="menu_item_x_axis">X-axis</string>
    <string name="menu_item_y_axis">Y-axis</string>
    <string name="menu_item_cap_glide">Glide limit</string>
    <string name="menu_item_units">Units</string>
    <string name="menu_item_set_range_marker">Set range marker</string>
    <string name="menu_item_crop_range">Crop range</string>
    <string name="menu_item_discard_markers">Discard markers</string>

    <!-- UnitSystem -->
    <string name="kmh">%1$s km/h</string>
    <string name="mph">%1$s mph</string>
    <string name="m">%1$s m</string>
    <string name="ft">%1$s ft</string>
    <string name="glide">%1$s</string>
    <string name="seconds">%1$s sec</string>
</resources>
